{
  "version": 4,
  "terraform_version": "1.6.0",
  "serial": 7,
  "lineage": "a6324c1b-97a6-b40f-b29e-a1211827f5e9",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow-http",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2023-10-09T09:11:53.087-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/practica4-400806/global/firewalls/allow-http-terraform",
            "log_config": [],
            "name": "allow-http-terraform",
            "network": "https://www.googleapis.com/compute/v1/projects/practica4-400806/global/networks/default",
            "priority": 1000,
            "project": "practica4-400806",
            "self_link": "https://www.googleapis.com/compute/v1/projects/practica4-400806/global/firewalls/allow-http-terraform",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": null,
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow-ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2023-10-09T09:11:53.504-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/practica4-400806/global/firewalls/allow-ssh-terraform",
            "log_config": [],
            "name": "allow-ssh-terraform",
            "network": "https://www.googleapis.com/compute/v1/projects/practica4-400806/global/networks/default",
            "priority": 1000,
            "project": "practica4-400806",
            "self_link": "https://www.googleapis.com/compute/v1/projects/practica4-400806/global/firewalls/allow-ssh-terraform",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": null,
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "terraform",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/centos-cloud/global/images/centos-7-v20220822",
                    "size": 20,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/practica4-400806/zones/europe-west1-d/disks/terraform"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Haswell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/practica4-400806/zones/europe-west1-d/instances/terraform",
            "instance_id": "5659379736506899440",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "n1-standard-1",
            "metadata_fingerprint": "dwbOX0Qw3L4=",
            "name": "terraform",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.22.215.94",
                    "network_tier": "PREMIUM"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/practica4-400806/global/networks/default",
                "network_ip": "10.132.0.5",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/practica4-400806/regions/europe-west1/subnetworks/default",
                "subnetwork_project": "practica4-400806"
              }
            ],
            "project": "practica4-400806",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/practica4-400806/zones/europe-west1-d/instances/terraform",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags_fingerprint": "42WmSpB8rSM=",
            "zone": "europe-west1-d"
          }
        }
      ]
    }
  ]
}